--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-sass": "^6.0.1",
     "nodemon": "^2.0.7"
   }
 }
