--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "node-sass": "^6.0.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "redux": "^4.1.0",
+    "video-react": "^0.14.1"
   }
 }
