--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
+    "include-media": "^1.4.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
